--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,10 @@ section h1 {
 section p {
 	font: 16px 'Open Sans';
 }
+section img {
+
+	padding-left: 200px;
+}
+html {
+	background-color: cornflowerblue;
+}
